--- a/skill-search/backend/.env.example
+++ b/skill-search/backend/.env.example
@@ -1,44 +1,106 @@
+################################################################################
 # Skills Search Backend - Environment Configuration
-# Copy this file to .env and customize for your environment
-
-# Application
-APP_VERSION=1.0.0
-ENVIRONMENT=development
+# ==============================================================================
+# This file is a TEMPLATE - copy or auto-generate to .env
+# DO NOT commit the actual .env file to version control
+#
+# To configure:
+#   Option 1: Run ../skill-search-setup.sh (interactive, recommended)
+#   Option 2: Copy this file to .env and manually edit values
+#
+# Configuration includes:
+#   - AWS Profile settings for different services
+#   - S3 Vector Bucket for embeddings search
+#   - S3 Bucket for user data ingestion
+#   - Search scoring parameters
+#   - Display settings
+################################################################################
 
 # AWS Configuration
-AWS_PROFILE=default
+# ------------------------------------------------------------------------------
+# General AWS profile (fallback for services that don't have specific profiles)
+AWS_PROFILE=<your-aws-profile>
 AWS_REGION=us-east-1
-AWS_BEDROCK_MODEL_ID=amazon.titan-embed-text-v2:0
-AWS_VECTOR_INDEX_NAME=skills-index
-AWS_S3_BUCKET_PREFIX=skills-selector-
 
-# CORS (comma-separated list)
+# AWS Bedrock Profile (for generating embeddings via Bedrock API)
+# Used when: Generating embeddings for search queries
+EMBEDDING_AWS_PROFILE=<your-bedrock-profile>
+EMBEDDING_AWS_REGION=us-east-1
+
+# AWS S3 Vectors Profile (for querying vector indexes)
+# Used when: Searching vector embeddings in S3 Vector bucket
+VECTOR_AWS_PROFILE=<your-s3-vectors-profile>
+VECTOR_AWS_REGION=us-east-1
+
+# AWS S3 Profile (for ingesting user data)
+# Used when: Loading user data from S3 standard bucket
+INGESTION_AWS_PROFILE=<your-s3-profile>
+INGESTION_AWS_REGION=us-east-1
+
+# S3 Bucket Configuration
+# ------------------------------------------------------------------------------
+# S3 Vector Bucket (contains skill embeddings and vector index)
+# Format: skills-vectors-XXXXXXXXXX
+# Created via: Skill Embeddings > Provision Vector Bucket & Index
+VECTOR_BUCKET=<your-vector-bucket-name>
+
+# S3 Standard Bucket (contains user data JSON files)
+# Format: skills-selector-XXXXXXXXXX
+# Created via: Skill Selector deployment
+INGESTION_BUCKET=<your-ingestion-bucket-name>
+
+# Vector Index Name
+VECTOR_INDEX=skills-index
+
+# Embedding Model Configuration
+# ------------------------------------------------------------------------------
+# Bedrock embedding model to use
+EMBEDDING_MODEL_ID=amazon.titan-embed-text-v2:0
+
+# Embedding dimensions
+EMBEDDING_DIM=1024
+
+# CORS Configuration
+# ------------------------------------------------------------------------------
 CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
-# Data
+# Data Paths
+# ------------------------------------------------------------------------------
 USER_DB_PATH=data/user_db.json
 
-# Scoring Configuration
-# Level weights (how much each hierarchy level contributes)
+# Search Configuration
+# ------------------------------------------------------------------------------
+# Number of skills to retrieve from vector search
+TOP_K_SKILLS=20
+
+# Minimum similarity threshold
+MIN_SIMILARITY=0.35
+
+# Scoring Weights (hierarchy levels)
+# ------------------------------------------------------------------------------
 LEVEL_WEIGHT_L1=0.1
 LEVEL_WEIGHT_L2=0.2
 LEVEL_WEIGHT_L3=0.5
 LEVEL_WEIGHT_L4=0.3
 
-# Rating multipliers (exponential: Beginner, Intermediate, Advanced)
+# Rating Multipliers (exponential)
+# ------------------------------------------------------------------------------
 RATING_MULTIPLIER_1=1.0
 RATING_MULTIPLIER_2=2.0
 RATING_MULTIPLIER_3=4.0
 
-# Transfer bonus (for related tech under different L3)
+# Transfer Bonus
+# ------------------------------------------------------------------------------
 TRANSFER_BONUS_PER_TECH=0.02
 TRANSFER_BONUS_CAP=0.15
 
-# Score buckets (thresholds)
+# Score Buckets (thresholds)
+# ------------------------------------------------------------------------------
 EXCELLENT_MIN_SCORE=80
 STRONG_MIN_SCORE=60
 GOOD_MIN_SCORE=40
 
-# Display configuration
+# Display Configuration
+# ------------------------------------------------------------------------------
 TOP_USERS_COUNT=5
 USERS_PER_PAGE=10
