--- a/skill-search/docker-compose.yml
+++ b/skill-search/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
+      - ../data:/data:ro  # Mount data directory (read-only)
       - ~/.aws:/root/.aws:ro  # Mount AWS credentials (read-only)
     environment:
       - PYTHONUNBUFFERED=1
