--- a/skill-search/frontend/package.json
+++ b/skill-search/frontend/package.json
@@ -4,10 +4,11 @@
   "description": "Skills Search - React frontend for semantic skill search",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
