UX improvements with new scoring algorithm

--- a/skill-search/backend/.env.example
+++ b/skill-search/backend/.env.example
@@ -76,25 +76,12 @@ TOP_K_SKILLS=20
 # Minimum similarity threshold
 MIN_SIMILARITY=0.35
 
-# Scoring Weights (hierarchy levels)
+# Scoring Configuration - Two-Dimensional Algorithm
 # ------------------------------------------------------------------------------
-LEVEL_WEIGHT_L1=0.1
-LEVEL_WEIGHT_L2=0.2
-LEVEL_WEIGHT_L3=0.5
-LEVEL_WEIGHT_L4=0.3
+# Note: Rating multipliers are defined in scoring_algorithm.py
+# Values: BEGINNER=1.0, INTERMEDIATE=3.0, ADVANCED=6.0
 
-# Rating Multipliers (exponential)
-# ------------------------------------------------------------------------------
-RATING_MULTIPLIER_1=1.0
-RATING_MULTIPLIER_2=2.0
-RATING_MULTIPLIER_3=4.0
-
-# Transfer Bonus
-# ------------------------------------------------------------------------------
-TRANSFER_BONUS_PER_TECH=0.02
-TRANSFER_BONUS_CAP=0.15
-
-# Score Buckets (thresholds)
+# Score Buckets (thresholds for display scores)
 # ------------------------------------------------------------------------------
 EXCELLENT_MIN_SCORE=80
 STRONG_MIN_SCORE=60
